# zkml-benchmark

./: .gitignore  .gitmodules  Dockerfile  README.md  bench.sh  ex2.csv  ex3.csv  ex4.csv  ex5.csv  experiment_results.csv  fix_nb_cell_id.py  init.sh  input.json  input_o1js.json  intsall_gtime.sh  linux_bench.sh  linux_prepare.sh  package-lock.json  package.json  recursion.sh  recursion_prepare.sh  requirements.txt  tsconfig.json
kimchi_exp/: Cargo.toml
kimchi_exp/src/: cc.rs  circuit.rs  main.rs  mlp.rs  prover.rs
mlp_orion/: Scarb.toml
mlp_orion/src/: lib.cairo  mlp.cairo
mlp_risczero/: Cargo.toml  experiment_results.csv  mlp_input_data_bytes.json  mlp_model_bytes.json
mlp_risczero/host/: Cargo.toml
mlp_risczero/host/src/: main.rs
mlp_risczero/methods/: Cargo.toml
mlp_risczero/methods/guest/: Cargo.toml
mlp_risczero/model_data/: Cargo.toml  generate_data.rs
models/example/: ezkl_demo copy.ipynb  ezkl_demo.ipynb  input.json  model.compiled  network.onnx  proof.json  settings.json
models/example/mlp1/: mlp.onnx  model.compiled  proof.json  settings.json  test.vk  witness.json
models/linear_regression/: linear_regression.ipynb  linear_regression.onnx
models/mlp/: input.json  mlp.ipynb  mlp.nbconvert.ipynb  mlp.onnx  mlp.py  model.compiled  proof.json  settings.json  test.vk  witness.json
models/mlp/.ipynb_checkpoints/: mlp-checkpoint.ipynb
models/mlp/mlp1/: calibration.json  mlp.onnx  model.compiled  proof.json  settings.json  test.vk  witness.json
models/mlp/mlp10/: calibration.json  mlp.onnx  model.compiled  proof.json  settings.json  test.vk  witness.json
models/mlp/mlp11/: calibration.json  mlp.onnx  model.compiled  proof.json  settings.json  test.vk  witness.json
models/mlp/mlp12/: calibration.json  mlp.onnx  proof.json  settings.json  test.vk  witness.json
models/mlp/mlp13/: calibration.json  mlp.onnx  proof.json  settings.json  test.vk  witness.json
models/mlp/mlp2/: calibration.json  mlp.onnx  model.compiled  proof.json  settings.json  test.vk  witness.json
models/mlp/mlp3/: calibration.json  mlp.onnx  model.compiled  proof.json  settings.json  test.vk  witness.json
models/mlp/mlp4/: mlp.onnx  model.compiled  proof.json  settings.json  test.vk  witness.json
models/mlp/mlp5/: calibration.json  (+6 more)
models/mlp22/: input.json  mlp.ipynb
models/recursion/: input.json  mlp.ipynb  mlp.nbconvert.ipynb
recursion_exp/: Cargo.toml  Dockerfile  docker-compose.yml  tools
recursion_exp/proto/: aggregator.proto
recursion_exp/src/: client.rs  fpfp.rs  main.rs  mlp.rs  server.rs
risczero_example/src/: main.rs
src/: add.ts  data_generate.js  experiment_results.csv  input.json  linear_regression.ts  mlp.ts  mlp22.ts  mlp_recursion.ts  recursion.ts  relu.ts  simple.ts
(+127 files in other folders)
