[package]
name = "kimchi_exp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# kimchi = { git = "https://github.com/o1-labs/proof-systems", features = ["internal_tracing"]}
kimchi = { path = "../recursion_exp/proof-systems/kimchi", features = ["internal_tracing"]}
ark-ff = { version = "0.3.0", features = ["parallel", "asm"] }
serde_json = "1.0.128"
ark-ec = "0.3.0"
