[package]
name = "recursion_exp"
version = "0.1.0"
edition = "2021"

[dependencies]
kimchi = { path = "/Users/mac/Workspace/mina/proof-systems/kimchi", features = ["internal_tracing"]}
ark-ff = { version = "0.3.0", features = ["parallel", "asm"] }
serde_json = "1.0.128"
ark-ec = "0.3.0"
tonic = "0.12.2"
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3.30"
hyper = { version = "1.4.1", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
bincode = "1.3.3"

[build-dependencies]
tonic-build = "0.12.2"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
