[package]
name = "recursion_exp"
version = "0.1.0"
edition = "2021"

[dependencies]
kimchi = { path="./proof-systems/kimchi", features = ["internal_tracing"]}
ark-ff = { version = "0.3.0", features = ["parallel", "asm"] }
serde_json = "1.0.128"
ark-ec = "0.3.0"
tonic = "0.12.2"
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3.30"
hyper = { version = "1.4.1", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
bincode = "1.3.3"
log = "0.4.22"
env_logger = "0.11.5"
chrono = "0.4.38"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "fpfp"
path = "src/fpfp.rs"
