[package]
name = "model_data"
version = "0.1.0"
edition = "2021"

[dependencies]
smartcore = { version = "0.3.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = "1.0"
ndarray = "0.15"
rmp-serde = "1.1.2"

[features]
default = ["serde"]


[[bin]]
name = "generate_data"
path = "generate_data.rs"
